fix navbar menu icon small devices

--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@ nav .menu-icon {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 2rem;
-  height: 2rem;
+  width: 1.2rem;
+  height: 1.2rem;
   background: transparent;
   cursor: pointer;
   border: none;
